--- a/config/Warsaw_campaign_info.toml
+++ b/config/Warsaw_campaign_info.toml
@@ -2,7 +2,7 @@
 # Those configuration will be used as the global attributes in the netCDF file for EARLINET.
 #
 # History:
-#   2019-09-09 First edition by Zhenping
+#   2019-09-12 First edition by Zhenping
 
 institution = "Leibniz-Institut für Troposphärenforschung e.V."
 
@@ -28,12 +28,12 @@ processor_name = ""
 processor_version = ""
 
 title = "Ground based LIDAR measurements"
-station_ID = "DUS"
-station_latitude = 30   # negative for southern hemisphere
-station_longitude = 100   # negative for west
-station_altitude = 870   # [m]
-station_starttime = "2019-07-07 00:00:00"
-station_endtime = "2099-07-07 00:00:00"
+station_ID = "WAW"
+station_latitude = 52   # negative for southern hemisphere
+station_longitude = 21   # negative for west
+station_altitude = 100   # [m]
+station_starttime = "2013-06-27 00:00:00"
+station_endtime = "2016-09-30 00:00:00"
 comment = "Central Asian dust measurements"
 references = "http://polly.rsd.tropos.de/"
 
