--- a/config/Cabauw_campaign_info.toml
+++ b/config/Cabauw_campaign_info.toml
@@ -4,14 +4,14 @@
 # History:
 #   2019-09-12 First edition by Zhenping
 
-institution = "Leibniz-Institut für Troposphärenforschung e.V."
+institution = "Royal Netherlands Meteorological Institute"
 
-PI = "Dietrich Althausen"
-PI_affliliation = "Leibniz-Institut für Troposphärenforschung e.V."
-PI_affiliation_acronym = "TROPOS"
-PI_address = "Permoserstraße 15, 04103 Leipzig, Germany"
+PI = "Arnoud Apituley"
+PI_affliliation = "Royal Netherlands Meteorological Institute"
+PI_affiliation_acronym = "KNMI"
+PI_address = "Utrechtseweg 297, NL-3731 GA De Bilt, Netherlands"
 PI_phone = ""
-PI_email = "dietrich@tropos.de"
+PI_email = "Arnoud.Apituley@knmi.nl"
 
 Data_Originator = "Holger Baars"
 Data_Originator_affliliation = "Leibniz-Institut für Troposphärenforschung e.V."
@@ -29,9 +29,9 @@ processor_version = ""
 
 title = "Ground based LIDAR measurements"
 station_ID = "CBW"
-station_latitude = 52   # negative for southern hemisphere
-station_longitude = 5   # negative for west
-station_altitude = -1   # [m]
+station_latitude = 51.97   # negative for southern hemisphere
+station_longitude = 4.93   # negative for west
+station_altitude = 0   # [m]
 station_starttime = "2014-09-30 00:00:00"
 station_endtime = "2014-11-19 00:00:00"
 comment = "CESAR observatory"
