--- a/config/Leipzig_campaign_info_2.toml
+++ b/config/Leipzig_campaign_info_2.toml
@@ -6,12 +6,12 @@
 
 institution = "Leibniz-Institut für Troposphärenforschung e.V."
 
-PI = "Dietrich Althausen"
+PI = "Ulla Wandinger"
 PI_affliliation = "Leibniz-Institut für Troposphärenforschung e.V."
 PI_affiliation_acronym = "TROPOS"
 PI_address = "Permoserstraße 15, 04103 Leipzig, Germany"
 PI_phone = ""
-PI_email = "dietrich@tropos.de"
+PI_email = "ulla@tropos.de"
 
 Data_Originator = "Holger Baars"
 Data_Originator_affliliation = "Leibniz-Institut für Troposphärenforschung e.V."
@@ -29,9 +29,9 @@ processor_version = ""
 
 title = "Ground based LIDAR measurements"
 station_ID = "LEI"
-station_latitude = 51   # negative for southern hemisphere
-station_longitude = 12   # negative for west
-station_altitude = 125   # [m]
+station_latitude = 51.35   # negative for southern hemisphere
+station_longitude = 12.43   # negative for west
+station_altitude = 90   # [m]
 station_starttime = "2015-03-12 00:00:00"
 station_endtime = "2099-01-01 00:00:00"
 comment = "Leipzig, Germany"
