--- a/config/Cabauw_campaign_info.toml
+++ b/config/Cabauw_campaign_info.toml
@@ -27,17 +27,18 @@ scc_version_description = ""
 processor_name = ""
 processor_version = ""
 
-title = "Ground based LIDAR measurements"
-station_ID = "CBW"
+title = "Profiles of aerosol optical properties"
+source = "Ground based LIDAR measurements"
+station_ID = "cbw"
 station_latitude = 51.97   # negative for southern hemisphere
 station_longitude = 4.93   # negative for west
 station_altitude = 0   # [m]
 station_starttime = "2014-09-30 00:00:00"
 station_endtime = "2014-11-19 00:00:00"
 comment = "CESAR observatory"
-references = "http://polly.rsd.tropos.de/"
+references = "Project website at http://www.earlinet.org"
 
-__file_format_version = "1.0"
+__file_format_version = "2.0"
 Conventions = "CF-1.7"
 hoi_system_ID = -1
 hoi_configuration_ID = -1
