--- a/config/Finokalia_campaign_info.toml
+++ b/config/Finokalia_campaign_info.toml
@@ -27,17 +27,18 @@ scc_version_description = ""
 processor_name = ""
 processor_version = ""
 
-title = "Ground based LIDAR measurements"
-station_ID = "FIK"
+title = "Profiles of aerosol optical properties"
+source = "Ground based LIDAR measurements"
+station_ID = "fik"
 station_latitude = 35.34   # negative for southern hemisphere
 station_longitude = 25.67   # negative for west
 station_altitude = 238   # [m]
 station_starttime = "2017-02-25 00:00:00"
 station_endtime = "2018-05-31 00:00:00"
 comment = "Finokalia, Greece"
-references = "http://polly.rsd.tropos.de/"
+references = "Project website at http://www.earlinet.org"
 
-__file_format_version = "1.0"
+__file_format_version = "2.0"
 Conventions = "CF-1.7"
 hoi_system_ID = -1
 hoi_configuration_ID = -1
