--- a/config/Kuopio_campaign_info.toml
+++ b/config/Kuopio_campaign_info.toml
@@ -27,17 +27,18 @@ scc_version_description = ""
 processor_name = ""
 processor_version = ""
 
-title = "Ground based LIDAR measurements"
-station_ID = "KUO"
+title = "Profiles of aerosol optical properties"
+source = "Ground based LIDAR measurements"
+station_ID = "kuo"
 station_latitude = 62.73   # negative for southern hemisphere
 station_longitude = 27.55   # negative for west
 station_altitude = 190   # [m]
 station_starttime = "2012-10-12 00:00:00"
 station_endtime = "2099-01-01 00:00:00"
 comment = "Kuopio, Finland"
-references = "http://polly.rsd.tropos.de/"
+references = "Project website at http://www.earlinet.org"
 
-__file_format_version = "1.0"
+__file_format_version = "2.0"
 Conventions = "CF-1.7"
 hoi_system_ID = -1
 hoi_configuration_ID = -1
