--- a/config/Limassol_campaign_info_1.toml
+++ b/config/Limassol_campaign_info_1.toml
@@ -5,6 +5,7 @@
 #   2019-09-12 First edition by Zhenping
 
 institution = "Cyprus University of Technology"
+location = "Limassol, Cyprus"
 
 PI = "Diofantos Hadjimitsis"
 PI_affliliation = "Cyprus University of Technology"
@@ -27,17 +28,18 @@ scc_version_description = ""
 processor_name = ""
 processor_version = ""
 
-title = "Ground based LIDAR measurements"
-station_ID = "LIM"
+title = "Profiles of aerosol optical properties"
+source = "Ground based LIDAR measurements"
+station_ID = "lim"
 station_latitude = 34.67   # negative for southern hemisphere
 station_longitude = 33.04   # negative for west
 station_altitude = 10   # [m]
 station_starttime = "2016-10-17 00:00:00"
 station_endtime = "2018-04-01 00:00:00"
 comment = "CyCARE"
-references = "http://polly.rsd.tropos.de/"
+references = "Project website at http://www.earlinet.org"
 
-__file_format_version = "1.0"
+__file_format_version = "2.0"
 Conventions = "CF-1.7"
 hoi_system_ID = -1
 hoi_configuration_ID = -1
