--- a/config/Warsaw_campaign_info.toml
+++ b/config/Warsaw_campaign_info.toml
@@ -27,17 +27,18 @@ scc_version_description = ""
 processor_name = ""
 processor_version = ""
 
-title = "Ground based LIDAR measurements"
-station_ID = "WAW"
+title = "Profiles of aerosol optical properties"
+source = "Ground based LIDAR measurements"
+station_ID = "waw"
 station_latitude = 52.21   # negative for southern hemisphere
 station_longitude = 20.98   # negative for west
 station_altitude = 112   # [m]
 station_starttime = "2013-06-27 00:00:00"
 station_endtime = "2029-01-01 00:00:00"
 comment = "University of Warsaw, Faculty of Physics"
-references = "http://polly.rsd.tropos.de/"
+references = "Project website at http://www.earlinet.org"
 
-__file_format_version = "1.0"
+__file_format_version = "2.0"
 Conventions = "CF-1.7"
 hoi_system_ID = -1
 hoi_configuration_ID = -1
