--- a/config/Leipzig_campaign_info_1.toml
+++ b/config/Leipzig_campaign_info_1.toml
@@ -4,28 +4,29 @@
 # History:
 #   2019-09-12 First edition by Zhenping
 
-institution = "Leibniz-Institut für Troposphärenforschung e.V."
+institution = "Leibniz Institute for Tropospheric Research, Leipzig"
 
 PI = "Ulla Wandinger"
-PI_affliliation = "Leibniz-Institut für Troposphärenforschung e.V."
+PI_affiliation = "Leibniz Institute for Tropospheric Research, Leipzig"
 PI_affiliation_acronym = "TROPOS"
 PI_address = "Permoserstraße 15, 04103 Leipzig, Germany"
 PI_phone = ""
 PI_email = "ulla@tropos.de"
 
 Data_Originator = "Holger Baars"
-Data_Originator_affliliation = "Leibniz-Institut für Troposphärenforschung e.V."
+Data_Originator_affiliation = "Leibniz Institute for Tropospheric Research, Leipzig"
 Data_Originator_affiliation_acronym = "TROPOS"
 Data_Originator_address = "Permoserstraße 15, 04103 Leipzig, Germany"
 Data_Originator_phone = ""
 Data_Originator_email = "baars@tropos.de"
 
-data_processing_institution = "Leibniz-Institut für Troposphärenforschung e.V."
+data_processing_institution = "Leibniz Institute for Tropospheric Research, Leipzig"
 
 scc_version = ""
 scc_version_description = ""
-processor_name = ""
-processor_version = ""
+processor_name = "PollyNET version 1.3"
+processor_version = "1.3"
+history = ""   # this will be expanded with the labview info
 
 title = "Profiles of aerosol optical properties"
 source = "Ground based LIDAR measurements"
@@ -40,5 +41,5 @@ references = "Project website at http://www.earlinet.org"
 
 __file_format_version = "2.0"
 Conventions = "CF-1.7"
-hoi_system_ID = -1
-hoi_configuration_ID = -1
+hoi_system_ID = 91
+hoi_configuration_ID = 215
