--- a/config/Limassol_campaign_info_1.toml
+++ b/config/Limassol_campaign_info_1.toml
@@ -8,25 +8,25 @@ institution = "Cyprus University of Technology"
 location = "Limassol, Cyprus"
 
 PI = "Diofantos Hadjimitsis"
-PI_affliliation = "Cyprus University of Technology"
+PI_affiliation = "Cyprus University of Technology"
 PI_affiliation_acronym = "CUT"
 PI_address = "30 Arch. Kyprianos Str., 3036 Limassol"
 PI_phone = ""
 PI_email = "d.hadjimitsis@cut.ac.cy"
 
 Data_Originator = "Holger Baars"
-Data_Originator_affliliation = "Leibniz-Institut für Troposphärenforschung e.V."
+Data_Originator_affiliation = "Leibniz Institute for Tropospheric Research, Leipzig"
 Data_Originator_affiliation_acronym = "TROPOS"
 Data_Originator_address = "Permoserstraße 15, 04103 Leipzig, Germany"
 Data_Originator_phone = ""
 Data_Originator_email = "baars@tropos.de"
 
-data_processing_institution = "Leibniz-Institut für Troposphärenforschung e.V."
+data_processing_institution = "Leibniz Institute for Tropospheric Research, Leipzig"
 
 scc_version = ""
 scc_version_description = ""
-processor_name = ""
-processor_version = ""
+processor_name = "PollyNET version 1.3"
+processor_version = "1.3"
 
 title = "Profiles of aerosol optical properties"
 source = "Ground based LIDAR measurements"
