--- a/config/Dushanbe_campaign_info_1.toml
+++ b/config/Dushanbe_campaign_info_1.toml
@@ -13,19 +13,19 @@ PI_address = "Permoserstraße 15, 04103 Leipzig, Germany"
 PI_phone = ""
 PI_email = "dietrich@tropos.de"
 
-Data_Originator = "Holger Baars"
+Data_Originator = "Julian Hofer"
 Data_Originator_affiliation = "Leibniz Institute for Tropospheric Research, Leipzig"
 Data_Originator_affiliation_acronym = "TROPOS"
 Data_Originator_address = "Permoserstraße 15, 04103 Leipzig, Germany"
 Data_Originator_phone = ""
-Data_Originator_email = "baars@tropos.de"
+Data_Originator_email = "hofer@tropos.de"
 
 data_processing_institution = "Leibniz Institute for Tropospheric Research, Leipzig"
 
 scc_version = ""
 scc_version_description = ""
-processor_name = "PollyNET version 1.3"
-processor_version = "1.3"
+processor_name = ""   # if this was set empty, the program will add the processor automatically based on the labview version or Picasso version
+processor_version = ""
 
 title = "Profiles of aerosol optical properties"
 source = "Ground based LIDAR measurements"
