--- a/config/campaign_list.toml
+++ b/config/campaign_list.toml
@@ -3,6 +3,28 @@
 #
 # History
 #   2019-09-11. First edition by Zhenping
+#   2019-09-23. Updated with some new stations
+
+[Haifa_campaign_info]
+location = "Haifa"
+country = "Israel"
+starttime = "2016-07-24 00:00:00"   # older measurements were given up
+endtime = "2019-05-12 00:00:00"
+system = "PollyXT_TROPOS"
+
+[Kosetice_campaign_info]
+location = "Kosetice"
+country = "Czech"
+starttime = "2017-08-14 00:00:00"
+endtime = "2017-11-10 00:00:00"
+system = "arielle"
+
+[Punta_Arenas_campaign_info]
+location = "Punta_Arenas"
+country = "Chile"
+starttime = "2018-12-01 00:00:00"
+endtime = "2020-03-31 00:00:00"
+system = "PollyXT_LACROS"
 
 [Dushanbe_campaign_info_2]
 location = "Dushanbe"
