--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,19 +1,16 @@
 name: CI p2e
 
 on: 
-  push:
+  pull_request:
     branches: 
       - master
-#   schedule:
-#     - cron: '0 */12 * * *'
 
 jobs:
   build:
-
-    runs-on: [ubuntu-latest, Windows, macOS]
+    runs-on: [ubuntu-latest, Windows-latest, macOS-latest]
     strategy:
       matrix:
-        python-version: [3.7]
+        python-version: [3.7, 3.6, 3.5]
 
     steps:
     - uses: actions/checkout@master
