--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,9 +7,10 @@ on:
 
 jobs:
   build:
-    runs-on: [ubuntu-latest, Windows-latest, macOS-latest]
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ubuntu-latest, windows-latest, macOS-latest]
         python-version: [3.7, 3.6, 3.5]
 
     steps:
@@ -21,28 +22,28 @@ jobs:
         python-version: ${{ matrix.python-version }}
   
     - uses: actions/cache@v1
-      if: startsWith(runner.os, 'Linux')
+      if: startsWith(${{ matrix.os }}, 'ubuntu')
       with:
         path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        key: ${{ matrix.os }}-pip-${{ hashFiles('**/requirements.txt') }}
         restore-keys: |
-          ${{ runner.os }}-pip-
+          ${{ matrix.os }}-pip-
 
     - uses: actions/cache@v1
-      if: startsWith(runner.os, 'macOS')
+      if: startsWith(${{ matrix.os }}, 'macOS')
       with:
         path: ~/Library/Caches/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        key: ${{ matrix.os }}-pip-${{ hashFiles('**/requirements.txt') }}
         restore-keys: |
-          ${{ runner.os }}-pip-
+          ${{ matrix.os }}-pip-
 
     - uses: actions/cache@v1
-      if: startsWith(runner.os, 'Windows')
+      if: startsWith(${{ matrix.os }}, 'Windows')
       with:
         path: ~\AppData\Local\pip\Cache
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        key: ${{ matrix.os }}-pip-${{ hashFiles('**/requirements.txt') }}
         restore-keys: |
-          ${{ runner.os }}-pip-
+          ${{ matrix.os }}-pip-
 
     - name: Install dependencies
       run: |
