--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,8 +47,9 @@ jobs:
 
     - name: Install dependencies
       run: |
+        python -m pip install --upgrade pip
         python setup.py install
-        pip install pycodestyle -y
+        pip install pycodestyle
 
     - name: Lint with pycodestyle
       run: |
