--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-        python-version: [3.7, 3.6, 3.5]
+        os: [ubuntu-latest, windows-latest]
+        python-version: [3.5]
 
     steps:
     - uses: actions/checkout@master
