feat: rename the repo as polly2scc
rename the repository as polly2scc, meanwhile unify the naming across all documents (close #18)

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = polly2SCC
+name = polly2scc
 
 author = Zhenping Yin
 author-email = zp.yin@whu.edu.cn
@@ -7,7 +7,7 @@ maintainer = Zhenping Yin
 maintainer-email = zp.yin@whu.edu.cn
 summary = Package for converting the polly profiles to netCDF4 files with EARLINET data fromat.
 description-file = readme.md
-home-page = https://github.com/PollyNET/polly_2_earlinet_convertor
+home-page = https://github.com/PollyNET/polly2scc
 license = MIT
 classifier =
     Development Status :: 3 - Alpha
@@ -29,4 +29,4 @@ packages =
 
 [entry_points]
 console_scripts =
-    p2e_go=src.polly_2_earlinet_convertor:main
+    polly2scc=src.polly2scc:main
