--- a/config/metadata_klett_raman.toml
+++ b/config/metadata_klett_raman.toml
@@ -22,6 +22,36 @@ units = "sr"
 dims = []
 dtype = 'double'
 
+[assumed_particle_lidar_ratio_error]
+long_name = "error on assumed particle lidar ratio for the elastic-only backscatter retrieval"
+units = "sr"
+dims = []
+dtype = 'double'
+
+[cloud_mask_type]
+_FillValue = -127
+long_name = "cloud mask type"
+flag_values = [0, 1, 2]
+flag_meanings = "no_cloudmask_available manual_cloudmask automatic_cloudmask"
+dims = []
+dtype = 'byte'
+
+[molecular_calculation_source]
+_FillValue = -127
+long_name = "data source of the molecular calculations"
+flag_values = [0, 1, 2, 3, 4, 5, 6, 7, 8]
+flag_meanings = "US_standard_atmosphere radiosounding ecmwf icon_iglo_12_23 icon_iglo_24_35 icon_iglo_36_47 gdas era5-1-12 era5-7-18"
+dims = []
+dtype = 'byte'
+
+[scc_product_type]
+long_name = "SCC product type"
+flag_values = [1, 2]
+flag_meanings = "experimental operational"
+valid_range = [1, 2]
+_FillValue = -127
+dims = []
+dtype = 'double'
     
 [time]
 long_name = "time"
